--- a/src/main/webapp/WEB-INF/views/swagger/index.html
+++ b/src/main/webapp/WEB-INF/views/swagger/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Swagger UI</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700"
-          rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/static/swagger/swagger-ui.css">
-    <link rel="icon" type="image/png" href="/static/swagger/favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="/static/swagger/favicon-16x16.png" sizes="16x16"/>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700"
+          rel="stylesheet">  -->
+    <link rel="stylesheet" type="text/css" href="static/swagger/swagger-ui.css">
+    <link rel="icon" type="image/png" href="static/swagger/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="static/swagger/favicon-16x16.png" sizes="16x16"/>
     <style>
         html {
             box-sizing: border-box;
@@ -67,16 +67,16 @@
 </svg>
 <div id="swagger-ui"></div>
 
-#(basePath)
 
-<script src="/static/swagger/swagger-ui-bundle.js"></script>
-<script src="/static/swagger/swagger-ui-standalone-preset.js"></script>
+
+<script src="static/swagger/swagger-ui-bundle.js"></script>
+<script src="static/swagger/swagger-ui-standalone-preset.js"></script>
 <script>
     window.onload = function () {
         // Build a system
         const ui = SwaggerUIBundle({
-            url: "#(basePath)/swagger/api",
-            validatorUrl: undefined,
+            url: "creditSwagger/api",
+            validatorUrl: "",
             dom_id: '#swagger-ui',
             presets: [
                 SwaggerUIBundle.presets.apis,
