--- a/src/main/webapp/pages/template/head.html
+++ b/src/main/webapp/pages/template/head.html
@@ -10,7 +10,9 @@
 <meta name="keywords" content="${HEAD_TITLE! }">
 <meta name="description" content="${HEAD_TITLE! }">
 
-<% var jflyfox_theme = session.session_user.theme!'default'; %>
+<% 
+	var jflyfox_theme = session.session_user.theme!'default';
+ %>
 <script type="text/javascript">
 	var jflyfox_theme = "${session.session_user.theme!'default' }";
 </script>
