--- a/src/main/webapp/pages/template/head.html
+++ b/src/main/webapp/pages/template/head.html
@@ -52,7 +52,7 @@
 <meta name="keywords" content="${HEAD_TITLE! }">
 <meta name="description" content="${HEAD_TITLE! }">
 
-
+<% var jflyfox_theme = session.session_user.theme!'default'; %>
 <script type="text/javascript">
 	var jflyfox_theme = "${session.session_user.theme!'default' }";
 </script>
@@ -77,6 +77,7 @@
 
 <!-- 系统样式 -->
 <% 
+	var theme_file = "/static/theme/" + jflyfox_theme + ".html";
 	include(theme_file){}
 	// 需要调整分页样式，文件管理样式
 %>
