--- a/src/main/webapp/pages/template/menu.html
+++ b/src/main/webapp/pages/template/menu.html
@@ -93,6 +93,7 @@ body { padding-top: 51px; }
 				<li id="page_role"><a role="menuitem" href="role/list">角色管理</a></li>
 				<li id="page_menu"><a role="menuitem" href="menu/list">菜单管理</a></li>
 		     	<li id="page_dict"><a role="menuitem" href="dict/list">数据字典</a></li>
+		     	<li id="page_dict"><a role="menuitem" href="dict/list">数据字典2</a></li>
 		    </ul>
   		</li>
   		*/ %>
