--- a/src/main/webapp/static/credit/css/reset.css
+++ b/src/main/webapp/static/credit/css/reset.css
@@ -25,6 +25,9 @@ img {
 *{
     box-sizing: border-box;
 }
+input {
+    outline: none;
+}
 
 input::input-placeholder{color:#808080!important;} 
 
@@ -44,6 +47,7 @@ color: #808080!important;
 
 html,body {
    height: 100%;
+   overflow: hidden;
 }
 
 
@@ -64,8 +68,13 @@ html,body {
     border:none;
     padding: 0 1.375rem;
     height: 2.2rem;
+    border-radius: 5px!important;
 }
-
+.btn-default {
+    color: #333;
+    background-color: #fff;
+    border: #ccc 1px solid;
+}
 
 .btn-primary {
     background: #1890ff;
@@ -83,6 +92,57 @@ html,body {
     border-color: #1890ff;
     color: #1890ff;
 }
+label.col-md-4{
+	padding:0 5px;
+}
+.fixed-table-pagination .pagination a {
+    margin:0 2px;
+    font-weight: 600;
+}
+.pagination>li>a, .pagination>li>span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #428bca;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+.pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
+    z-index: 2;
+    cursor: default;
+    color: #2592fc;
+    border:1.5px solid #2592fc;
+}
+.dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
+    color: #fff;
+    text-decoration: none;
+    background-color: #428bca;
+    outline: 0;
+}
+.dropdown-menu>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
+
+.pagination-detail {
+    font-size: 1rem;
+}
+
+.fixed-table-header-columns, .fixed-table-body-columns {
+    z-index: 999;
+}
+ /***面板屑*/
+ .breadcrumb {
+     background: #fff;
+ }
 
 /********************************媒体查询********************************/
 @media (min-width: 576px) { 
