--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -245,7 +245,7 @@ $(function(){
 //启动订单模拟器
 function start(){
 	createArr();
-	mInterval=setInterval(mIncreaseFunction,1000);
+	//mInterval=setInterval(mIncreaseFunction,1000);
 }
 //操作数据库
 function incrementNumber(num){
