--- a/src/main/webapp/static/credit/css/common.css
+++ b/src/main/webapp/static/credit/css/common.css
@@ -1,15 +1,19 @@
-
-
-
+:root {
+    --fontColor:#808080;
+    --activeColor:#1890ff;
+    --inputWidthMD:21rem;/*中等input宽*/
+    --inputWidthsm:13.5rem;/*中等input宽*/
+}
 /* ==================头部=================== */
 #container {
     position: relative;
-    height: calc(100% - 5.375rem);
+    height: calc(100% - 5rem);
 }
 
 header {
     width: 100%;
-    height: 5.375rem;
+    height: 5rem;
+    margin-bottom: .5rem;
 }
 .head-row {
     height: 100%;
@@ -17,8 +21,10 @@ header {
 }
 .head-logo-box {
     height: 100%;
-    /* min-width: 15.625rem; */
     background:#03223f;
+    left: -1px;
+    box-shadow: 1px 3px 11px 0px #666;
+    z-index: 999;
 }
 .logo-content {
     width: 10.875rem;
@@ -27,8 +33,10 @@ header {
     background-size: contain;
 }
 .header-right-content {
+    position: relative;
     width:16.125rem;
     height: 100%;
+  
 }
 .message {
     height: 100%;
@@ -41,23 +49,71 @@ header {
     padding-left: 1.125rem;
     cursor: pointer;
 }
-.user-content .fa-user {
+.user-content:hover {
+    color: var(--activeColor);
+}
+.user-content:hover .fa-user-o{
+    color: var(--activeColor);
+}
+.user-content .fa-user-o {
     margin-right: .5rem;
 }
 .user-content span {
     font-size: 1.1rem;
 }
-.fa-bell-o,.user-content .fa-user {
+.fa-bell-o,.user-content .fa-user-o {
     font-size: 1.5rem;
     cursor: pointer;
+    color: var(--fontColor);
 }
 
-/*=================中间============================*/
-.nav-row {
-    /*height: 62.125rem;*/
-    padding: 0;
+.logout {
+    display: none;
+    position: absolute;
+    left: 6rem;
+    top: 4.75rem;
+    width: 6rem;
+    height: 2.8rem;
+    line-height: 2.8rem;
+    text-align: center;
+    z-index: 1;
+    background: #fff;
+    box-shadow: 0 0 1px 2px #eee;
+    cursor: pointer;
+    color: #808080;
 }
+.logout:hover{
+    box-shadow: 0 0 1px 1px var(--activeColor);
+    color: var(--activeColor);
+}
+.logout:hover .popover-arrow {
+    border-color:var(--activeColor);
+    border-width: 1px 0 0 1px;
+}
+.logout-show {
+    display: block;
+}
+.logout  i {
+    margin-right: .2rem;
+}
+/*=================中间============================*/
+.menu-icon {
+    display: inline-block;
+    width: 1.3rem;
+    margin-right: 1.2rem;
+    margin-top: -.5rem;
+}
+.nav-row {
+    padding: 0;
+    top: -.5rem;
+    left: -1px;
+    box-shadow: 2px 5px 10px 0px #666;
+    z-index: 999;
+}
+
 .bg-f {
+    min-height: 100%;
+    _height:100%;
     background: #fff;
 }
 .menu1 .fa {
@@ -67,9 +123,13 @@ header {
 .main {
     width: 100%;
     padding: 0;
-    padding-top: .2rem;
+    background: #f1f2f6;
 }
 /**表格*/
+/*表格上搜索框*/
+.table-search-input {
+    margin: 1.875rem 0;
+}
  .fixed-table-header {
     background:#fafafa;
 }
@@ -78,6 +138,105 @@ header {
 }
 .table-content{
 	background: #f1f2f6;
-	padding:2.5rem!important;
+    padding: 1.25rem;
     overflow-y:auto;
+}
+
+
+/*漏斗*/
+.fa-filter {
+    color: #aaa;
+    cursor: pointer;
+}
+
+.main-header {
+    /* height: 6.25rem; */
+    padding-left: 2.5rem;
+    box-shadow: 6px 2px 2px 1px #e5e5e5;
+    background: #fff;
+    margin-bottom: 0.4rem;
+}
+.breadcrumb {
+    margin-bottom: 0;
+    padding: 1rem 0 0 0;
+}
+.breadcrumb  li a {
+    color: var(--fontColor);
+    font-size: 1.125rem;
+}
+.main-title {
+    font-size: 1.625rem;
+    font-weight: 600;
+    padding: .75rem 0;
+}
+
+
+.table-content{
+	height: calc(100% - 9.45rem);
+}
+.search-input {
+    width: var(--inputWidthsm)!important;
+}
+label {
+    font-weight: 600;
+}
+
+/*过滤样式*/
+.th-inner  {
+    position: relative;
+    overflow: visible!important;
+}
+#table .deal-state {
+    display: none!important;
+}
+.deal-state {
+    height: 18rem;
+    overflow-y: auto;
+    box-shadow: 0 0 5px 1px #ddd;
+    padding: 1rem;
+    background: #fff;
+    display: none;
+    z-index: 10;
+}
+.deal-state-show {
+    display: block;
+  
+}
+
+.form-check {
+    display: flex;
+    align-items: center;
+}
+.form-check-label {
+    margin-left: .5rem;
+}
+
+
+
+.order-detail  span:first-child {
+    color: #414141;
+    font-weight: 600;
+}
+.order-detail  span:last-child {
+    color: #818181;
+}
+
+
+/*table 第一列*/
+.fixed-table-body-columns table tbody tr {
+    color: var(--activeColor);
+    cursor: pointer;
+}
+.fixed-table-body-columns table tbody tr:hover {
+    text-decoration: underline;
+}
+
+/*内容小标题*/
+.l-title {
+    font-size: 1.25rem;
+    color: #191919;
+    font-weight: 600;
+    padding: 1.875rem 0;
+    padding-left: 1.875rem;
+    border-bottom:solid 2px #e6e9ee;
 }
