--- a/src/main/webapp/static/credit/css/common.css
+++ b/src/main/webapp/static/credit/css/common.css
@@ -8,9 +8,11 @@
 /* ==================头部=================== */
 #container {
     position: relative;
-    height: calc(100% - 5rem);
+    height: calc(100% - 2rem);
 }
-
+#main_content {
+    padding: 0;
+}
 header {
     width: 100%;
     height: 5rem;
@@ -126,6 +128,7 @@ header {
     width: 100%;
     padding: 0;
     background: #f1f2f6;
+    overflow-y:auto;
 }
 /**表格*/
 /*表格上搜索框*/
@@ -141,7 +144,7 @@ header {
 .table-content{
 	background: #f1f2f6;
     padding: 1.25rem;
-    overflow-y:auto;
+ 
 }
 
 
