--- a/src/main/webapp/static/credit/css/index.css
+++ b/src/main/webapp/static/credit/css/index.css
@@ -50,7 +50,7 @@
 /* 内容 */
 
 .table-content {
-    height: calc(100% - 8.9rem);
+    height: calc(100% - 11rem);
 }
 
 .search-input {
@@ -109,4 +109,10 @@
 
 .btn-row>.btn {
     margin-left: 5rem!important;
+}
+
+#btnCollapse {
+    height:3rem;
+    overflow: hidden;
+    transition: all .2s;
 }
