--- a/src/main/webapp/static/credit/css/menu.css
+++ b/src/main/webapp/static/credit/css/menu.css
@@ -1,8 +1,4 @@
-:root {
 
-    --fontColor:#808080;
-    --activeColor:#2592fc;
-}
 /*滚动条样式*/
 .left-nav::-webkit-scrollbar {/*滚动条整体样式*/
     width: 4px;     /*高宽分别对应横竖滚动条的尺寸*/
@@ -30,9 +26,9 @@
 .left-nav {
     width: 100%;
     height: 100%;
-    padding-top: 2rem;
     background-color: #001528;
     overflow: auto;
+    padding: 2rem 1rem 6rem 1rem;
 }
 
 .left-nav li {
@@ -43,7 +39,7 @@
 .left-nav a {
     position: relative;
     display: block;
-    padding: 1rem 1rem 1rem 2.75rem;
+    padding: 1rem ;
     color: #bfc6cc;
 }
 
@@ -65,8 +61,8 @@
 }
 
 .left-nav a:before {
-    left: 1.25em;
-    top: 55%;
+   /* left: 1.25em;
+    top: 55%;*/
     width: 1.125em;
     height: 1.125em;
     transform: translateY(-50%);
@@ -76,7 +72,7 @@
 
 .left-nav li.hasChild > a:after {
     top: 1.5em;
-    right: 3em;
+    right: 1em;
     border: .125em solid #fff;
     transform: rotate(225deg) scale(.75);
     border-right: none;
@@ -100,19 +96,13 @@
     background-color:var(--activeColor);
     color: #fff;
 }
-
-
-
 .left-nav .menu1 {
-    font-size: 1.2rem;
+    font-size: 1.125rem;
 }
-
-
 .left-nav .menu2 {
-    padding-left: 6rem;
-    font-size: 1.275rem;
+    padding-left: 4rem;
+    font-size: 1.125rem;
 }
-
 .left-nav .menu2:before {
     left: 2.25rem;
 }
