--- a/src/main/webapp/static/credit/css/order_manage/order_verify.css
+++ b/src/main/webapp/static/credit/css/order_manage/order_verify.css
@@ -60,3 +60,7 @@
     flex-direction: column;
     align-items: center;
 }
+.table-content #table tbody tr td:first-of-type {
+    color: var(--activeColor);
+    cursor: pointer;
+}
