--- a/src/main/webapp/template/bbs/home/home.html
+++ b/src/main/webapp/template/bbs/home/home.html
@@ -1,70 +1,73 @@
-<%
-var orderType = parseInt(parameter.orderType!1);
-// 获取文章
-var articlelist = temp.articleOrder(paginator.pageNo, paginator.pageSize, session.site.siteId, orderType);
-%>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="renderer" content="webkit" />
+    <meta name="force-rendering" content="webkit" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
+    <title>联信</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="${BASE_PATH }static/credit/assets/bootstrap-4.1.1-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/reset.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/common.css">
+   <link rel="stylesheet" href="${BASE_PATH }static/credit/css/login.css">
+   <script type="text/javascript"> let path ="${BASE_PATH }";</script>
+</head>
+<body>
+    
+    <div class="container-fluid login-content">
+       
+       <div class="row d-flex justify-content-end" style="height: 100%">
+           <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 right-box d-flex flex-column align-items-center">
+               <!-- logo -->
+                <div class="logo-box"></div>
+                <!-- title -->
+                <h2 class="system-name">联信征信报告系统</h2>
+                <form  id="meForm" method="POST" class="form-horizontal" role="form">
+                    <!-- 用户名 -->
+                    <div class="form-group">
+                        <div class="input-group username ">
+                            <span class="input-group-addon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                            </span>
+                            <input name="username" type="text" class="form-control border-left-0" id="username">
+                        </div>
+                        <small class="userTip">请输入用户名</small>
+                    </div>
+                    <!-- 密码 -->
+                    <div class="form-group">
+                        <div class="input-group password ">
+                            <span class="input-group-addon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-lock" aria-hidden="true"></i>
+                            </span>
+                            <input name="password" type="password" class="form-control border-left-0" id="psw">
+                        </div>
+                        <small  class="psdTip">请输入密码</small>
+                    </div>
+                    
+                    <input type="hidden" class="isSuccess" value="${isSuccess!}">
+                   	<div class="error-tip" >用户名或密码错误</div>
+            		 
+                    <div class="form-group">
+                       
+                            <button type="button" class="btn btn-primary btn-lg btn-login">登录</button>
+                      
+                    </div>
+                </form>
+                
+                <div class="bottom-text mt-auto">技术支持：青岛海联软件科技有限公司</div>
+           </div>
+           
+       </div>
+       
+        
+    </div>
+    
 
-<% 
-	var headContent = {
-%>
-	<% include("/template/bbs/includes/header.html"){} %>
-	
-<%
-};
-%>
-
-<%
-var bodyContent = {
-%>
-
-<%  include("/template/bbs/includes/header_menu.html"){} %>	
-
-<div id="main" style="margin:0 2%;">
-<div class="row">
-
-	<!--  文章 -->
-	<div class="col-md-8">
-		<div class="panel panel-default">
-		  <div class="panel-heading">
-				<ul class="nav nav-pills fox-nav">
-				  <li role="presentation" class="${orderType==1?'active':''}"><a href="${ctx }?orderType=1" class="fox-pills"><i class="fa fa-newspaper-o fox-color-1"></i> 默认</a></li>
-				  <li role="presentation" class="${orderType==2?'active':''}"><a href="${ctx }?orderType=2" class="fox-pills"><i class="fa fa-calendar fox-color-1"></i> 最新</a></li>
-				  <li role="presentation" class="${orderType==3?'active':''}"><a href="${ctx }?orderType=3"><i class="fa fa-thumbs-up fox-color-1"></i> 精品</a></li>
-				  <li role="presentation" class="${orderType==4?'active':''}"><a href="${ctx }?orderType=4"><i class="fa fa-commenting fox-color-1"></i> 待回复</a></li>
-				</ul>
-		  </div>
-	  
-	  <!-- 文章列表 -->
-	  <% include("/template/bbs/includes/articlelist.html",{articlelist:articlelist,defalutimg:defalutimg!''}){} %>
-		</div>
-	</div>
-
-	<div class="col-md-4">
-		<!-- 用户信息 -->
-		<%include("/template/bbs/includes/userinfo.html"){} %>		
-		
-		<!-- 标签 -->
-		<% var tagPage = temp.tagsPage(1, 50, session.site.siteId); %>
-		<%  include("/template/bbs/includes/tags.html",{taglist:tagPage}){} %>
-		
-		<!-- 推荐文章 -->
-		<%  include("/template/bbs/includes/recommend.html"){} %>
-		
-		<!-- 广告 -->
-		<%  include("/template/bbs/includes/advertise.html"){} %>
-		
-		<!-- 友情链接 -->
-		<%  include("/template/bbs/includes/friendly.html"){} %>	
-	</div>
-
-</div>
-</div>
-
-<%  include("/template/bbs/includes/footer.html"){} %>
-	
-<a id="scrollTop" href="javacript:void(0);" title="返回顶部" style="display: inline;"></a>
-
-<%}; %>
-
-<% layout("/pages/template/_layout.html",{head:headContent,body:bodyContent}){ %>
-<%} %>
+    <script src="${BASE_PATH }static/credit/assets/jquery/jquery-2.1.0.js"></script>
+    <script src="${BASE_PATH }static/credit/assets/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
+    <script src="${BASE_PATH }static/credit/js/common.js"></script>
+    <script src="${BASE_PATH }static/credit/js/login.js"></script>
+</body>
+</html>
