--- a/src/main/webapp/static/credit/css/passward_change.css
+++ b/src/main/webapp/static/credit/css/passward_change.css
@@ -1,6 +1,6 @@
 .stage{
-    margin-top:4rem;
-    margin-bottom: 6.5rem;
+    margin-top:5rem;
+    margin-bottom: 10rem;
 }
 .stage ul>li{
     position: relative;
@@ -27,9 +27,9 @@
     display: inline-block;
     right: -3rem;
     transform: translateY(-50%);
-    line-height: 2.25rem;
-    width: 2.5rem;
-    height: 2.5rem;
+    line-height: 2.85rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
     border: .125rem solid;
     color: #fff;
@@ -85,7 +85,7 @@
     overflow: hidden;
 }
 .step_top{
-    margin-bottom: 6rem;
+    margin-bottom: 8rem;
 }
 .security_code{
     margin-bottom: 2.25rem;
@@ -98,5 +98,7 @@
 }
 .success .step_top{
     margin-bottom: 9rem;
+    font-size: 2rem;
+    margin-top: 0.9rem;
 }
 
