--- a/src/main/webapp/static/credit/css/order_manage/order_common.css
+++ b/src/main/webapp/static/credit/css/order_manage/order_common.css
@@ -238,3 +238,791 @@
 .padding-top-none{
     padding-top: 0 !important;
 }
+/*合计*/
+.total-box{
+    padding-right: 0 !important;
+}
+.order-content .total-box ul{
+    width: 100%;
+}
+.order-content .total-box ul li{
+   width: 33%;
+    display: inline-block;
+    text-align: center;
+    padding-left: 1.5rem;
+    padding-right: 0.5rem;
+}
+.bg-f .font_w_600{
+    font-weight: 600;
+}
+/*重置样式*/
+.table-content{
+    padding: 0 1.25rem;
+    margin-top: 1.25rem;
+}
+#container {
+    position: relative;
+ /*   height: calc(100% - 5rem);*/
+}
+.bootstrap-table {
+    margin: 1rem 2rem;
+}
+/*导航栏样式 start*/
+.detail_tab-bar{
+    position: relative;
+}
+.tab_bar {
+    padding-left: 0;
+}
+.tab_bar li{
+    display: inline-block;
+    font-size: 1.125rem;
+    color: var(--fontColor);
+    cursor: pointer;
+}
+.tab_bar li a{
+    color: var(--fontColor);
+    display: inline-block;
+    padding: 0 2rem 0.75rem 2rem;
+}
+.tab-a-active{
+    color: var(--activeColor) !important;
+}
+.tab-active{
+    border-bottom: solid 3px var(--activeColor);
+    font-weight: 500;
+}
+.state_box{
+    position: absolute;
+    right: 2.5rem;
+    bottom: 1rem;
+    font-size: 1.625rem;
+    text-align: right;
+    color: rgb(26,26,26);
+}
+.state_box span{
+    display: block;
+
+}
+.state_box span:first-of-type{
+    margin-bottom: 1rem;
+    font-size: 1.125rem;
+    color: rgb(128,128,128);
+}
+/*导航栏样式 end*/
+
+/*内容展示 start*/
+.company_report_name{
+    border-bottom: none;
+    padding-bottom: 0rem;
+}
+.order-content{
+    padding: 1rem;
+}
+.company_info{
+    font-size: 1.25rem;
+    color: #191919;
+    font-weight: 600;
+    padding: 1rem 0 1rem 1rem;
+}
+.table_summary_content{
+    padding: 1rem;
+    color: var(--fontColor);
+}
+.table_summary_content p{
+    line-height: 2rem;
+    font-size: 1rem;
+}
+/*重置公共样式*/
+.bg-f{
+    min-height: 0;
+}
+.table_summary{
+    margin-top: 1rem;
+}
+.table_summary .l-title{
+    background-color: rgb(250,250,250);
+    border: 1px solid #e6e6e6;
+}
+/*流程进度 start*/
+.progress-box{
+    padding-top: 0;
+}
+.bar_box{
+    margin-top: 0.875rem;
+}
+.bar_box span{
+    display: block;
+    /* width: 12.625rem;*/
+    padding: 0.5rem 0;
+    color: var(--fontColor);
+
+}
+.bar_box ul li{
+    display: inline-block;
+    font-size: 1.125rem;
+}
+.bar_box .bar-span-box{
+    height: 3rem;
+    margin-bottom: 0.5rem;
+}
+.bar_box .span_circle{
+    width: 0.625rem;
+    height: 0.625rem;
+    border-radius: 0.3125rem;
+    display: inline-block;
+    margin-right: 1.25rem;
+    padding: 0;
+ /*   background-color: rgb(209,209,209);*/
+    background: url("../../imgs/order/dot-gray.png") no-repeat;
+    background-size: 100% 100%;
+}
+.bar_box .span_bar{
+    width: 7.3rem;
+    height: 0.3rem;
+    display: inline-block;
+    vert-align: middle;
+    margin-right: 1.25rem;
+    padding: 0;
+    background-color: rgb(209,209,209);
+}
+.bar_box ul li span:first-of-type{
+    padding-top: 0;
+}
+
+.bar_box .span_active{
+    width: 0.625rem;
+    height: 0.625rem;
+    border-radius: 0.3125rem;
+ /*   background-color:  var(--activeColor);*/
+    background: url("../../imgs/order/dot-blue.png") no-repeat;
+    background-size: 100% 100%;
+    display: inline-block;
+    padding: 0;
+    margin-right: 1.25rem;
+}
+.bar_box .bar_active{
+    width: 7.5rem;
+    height: 0.3rem;
+    background-color:  var(--activeColor);
+    display: inline-block;
+    padding: 0;
+    margin-right: 1.25rem;
+}
+.bar_box .circle_active{
+    width: 1.5rem;
+    height: 1.5rem;
+   /* border-radius: 0.75rem;
+    background: -webkit-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Safari 5.1 - 6.0 *!
+    background: -o-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Opera 11.6 - 12.0 *!
+    background: -moz-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Firefox 3.6 - 15 *!
+    background: radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* 标准的语法 *!*/
+    background: url("../../imgs/order/dot-select.png") no-repeat;
+    background-size: 100% 100%;
+    display: inline-block;
+    margin-right: 1.25rem;
+}
+.bar_box .world_active{
+    color:var(--titleColor);
+    font-weight: 600;
+}
+/*流程进度 end*/
+
+/*附件样式*/
+.downloadFile{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 11.25rem;
+    height: 8.125rem;
+    border:1px dashed #ebecf0;
+    border-radius: 6px;
+    margin-left: 1rem;
+}
+.order-yulan{
+    text-align: center;
+    width: 11.25rem;
+}
+/*表格样式重置*/
+.fixed-table-container thead th .th-inner, .fixed-table-container tbody td .th-inner {
+    padding-left: 1.5rem;
+}
+.bootstrap-table .table:not(.table-condensed), .bootstrap-table .table:not(.table-condensed) > tbody > tr > th, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > th, .bootstrap-table .table:not(.table-condensed) > thead > tr > td, .bootstrap-table .table:not(.table-condensed) > tbody > tr > td, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > td{
+    padding-left: 1.5rem;
+}
+/*圆环图样式*/
+.invest-ratio-echarts .chartBox{
+    width: 100%;
+    height: 15rem;
+}
+.invest-ratio-echarts .chartBox #ec001_pie{
+    width: 100%;
+    height: 15rem;
+}
+/*给内容加边框 没有上边框*/
+.box_border{
+    border: 1px solid #e6e6e6;
+    border-top: 0;
+    font-weight: 400;
+}
+.box_border_all{
+    border: 1px solid #e6e6e6;
+    font-weight: 400;
+    font-size: 1rem;
+}
+/*备注信息*/
+.info_remark{
+    line-height: 2rem;
+    font-weight: 400;
+}
+.margin-bottom-none{
+    margin-bottom: 0 !important;
+}
+.report-textarea-big {
+    width: 74rem;
+    height: 10rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 0.5rem;
+}
+.margin-top-none{
+    margin-top: 0 !important;
+}
+.padding-bottom-none{
+    padding-bottom: 0 !important;
+}
+.padding-top-none{
+    padding-top: 0 !important;
+}
+/*合计*/
+.total-box{
+    padding-right: 0 !important;
+}
+.order-content .total-box ul{
+    width: 100%;
+}
+.order-content .total-box ul li{
+   width: 33%;
+    display: inline-block;
+    text-align: center;
+    padding-left: 1.5rem;
+    padding-right: 0.5rem;
+}
+.bg-f .font_w_600{
+    font-weight: 600;
+}
+/*重置样式*/
+.table-content{
+    padding: 0 1.25rem;
+    margin-top: 1.25rem;
+}
+#container {
+    position: relative;
+ /*   height: calc(100% - 5rem);*/
+}
+.bootstrap-table {
+    margin: 1rem 2rem;
+}
+/*导航栏样式 start*/
+.detail_tab-bar{
+    position: relative;
+}
+.tab_bar {
+    padding-left: 0;
+}
+.tab_bar li{
+    display: inline-block;
+    font-size: 1.125rem;
+    color: var(--fontColor);
+    cursor: pointer;
+}
+.tab_bar li a{
+    color: var(--fontColor);
+    display: inline-block;
+    padding: 0 2rem 0.75rem 2rem;
+}
+.tab-a-active{
+    color: var(--activeColor) !important;
+}
+.tab-active{
+    border-bottom: solid 3px var(--activeColor);
+    font-weight: 500;
+}
+.state_box{
+    position: absolute;
+    right: 2.5rem;
+    bottom: 1rem;
+    font-size: 1.625rem;
+    text-align: right;
+    color: rgb(26,26,26);
+}
+.state_box span{
+    display: block;
+
+}
+.state_box span:first-of-type{
+    margin-bottom: 1rem;
+    font-size: 1.125rem;
+    color: rgb(128,128,128);
+}
+/*导航栏样式 end*/
+
+/*内容展示 start*/
+.company_report_name{
+    border-bottom: none;
+    padding-bottom: 0rem;
+}
+.order-content{
+    padding: 1rem;
+}
+.company_info{
+    font-size: 1.25rem;
+    color: #191919;
+    font-weight: 600;
+    padding: 1rem 0 1rem 1rem;
+}
+.table_summary_content{
+    padding: 1rem;
+    color: var(--fontColor);
+}
+.table_summary_content p{
+    line-height: 2rem;
+    font-size: 1rem;
+}
+/*重置公共样式*/
+.bg-f{
+    min-height: 0;
+}
+.table_summary{
+    margin-top: 1rem;
+}
+.table_summary .l-title{
+    background-color: rgb(250,250,250);
+    border: 1px solid #e6e6e6;
+}
+/*流程进度 start*/
+.progress-box{
+    padding-top: 0;
+}
+.bar_box{
+    margin-top: 0.875rem;
+}
+.bar_box span{
+    display: block;
+    /* width: 12.625rem;*/
+    padding: 0.5rem 0;
+    color: var(--fontColor);
+
+}
+.bar_box ul li{
+    display: inline-block;
+    font-size: 1.125rem;
+}
+.bar_box .bar-span-box{
+    height: 3rem;
+    margin-bottom: 0.5rem;
+}
+.bar_box .span_circle{
+    width: 0.625rem;
+    height: 0.625rem;
+    border-radius: 0.3125rem;
+    display: inline-block;
+    margin-right: 1.25rem;
+    padding: 0;
+ /*   background-color: rgb(209,209,209);*/
+    background: url("../../imgs/order/dot-gray.png") no-repeat;
+    background-size: 100% 100%;
+}
+.bar_box .span_bar{
+    width: 7.3rem;
+    height: 0.3rem;
+    display: inline-block;
+    vert-align: middle;
+    margin-right: 1.25rem;
+    padding: 0;
+    background-color: rgb(209,209,209);
+}
+.bar_box ul li span:first-of-type{
+    padding-top: 0;
+}
+
+.bar_box .span_active{
+    width: 0.625rem;
+    height: 0.625rem;
+    border-radius: 0.3125rem;
+ /*   background-color:  var(--activeColor);*/
+    background: url("../../imgs/order/dot-blue.png") no-repeat;
+    background-size: 100% 100%;
+    display: inline-block;
+    padding: 0;
+    margin-right: 1.25rem;
+}
+.bar_box .bar_active{
+    width: 7.5rem;
+    height: 0.3rem;
+    background-color:  var(--activeColor);
+    display: inline-block;
+    padding: 0;
+    margin-right: 1.25rem;
+}
+.bar_box .circle_active{
+    width: 1.5rem;
+    height: 1.5rem;
+   /* border-radius: 0.75rem;
+    background: -webkit-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Safari 5.1 - 6.0 *!
+    background: -o-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Opera 11.6 - 12.0 *!
+    background: -moz-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Firefox 3.6 - 15 *!
+    background: radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* 标准的语法 *!*/
+    background: url("../../imgs/order/dot-select.png") no-repeat;
+    background-size: 100% 100%;
+    display: inline-block;
+    margin-right: 1.25rem;
+}
+.bar_box .world_active{
+    color:var(--titleColor);
+    font-weight: 600;
+}
+/*流程进度 end*/
+
+/*附件样式*/
+.downloadFile{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 11.25rem;
+    height: 8.125rem;
+    border:1px dashed #ebecf0;
+    border-radius: 6px;
+    margin-left: 1rem;
+}
+.order-yulan{
+    text-align: center;
+    width: 11.25rem;
+}
+/*表格样式重置*/
+.fixed-table-container thead th .th-inner, .fixed-table-container tbody td .th-inner {
+    padding-left: 1.5rem;
+}
+.bootstrap-table .table:not(.table-condensed), .bootstrap-table .table:not(.table-condensed) > tbody > tr > th, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > th, .bootstrap-table .table:not(.table-condensed) > thead > tr > td, .bootstrap-table .table:not(.table-condensed) > tbody > tr > td, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > td{
+    padding-left: 1.5rem;
+}
+/*圆环图样式*/
+.invest-ratio-echarts .chartBox{
+    width: 100%;
+    height: 15rem;
+}
+.invest-ratio-echarts .chartBox #ec001_pie{
+    width: 100%;
+    height: 15rem;
+}
+/*给内容加边框 没有上边框*/
+.box_border{
+    border: 1px solid #e6e6e6;
+    border-top: 0;
+    font-weight: 400;
+}
+.box_border_all{
+    border: 1px solid #e6e6e6;
+    font-weight: 400;
+    font-size: 1rem;
+}
+/*备注信息*/
+.info_remark{
+    line-height: 2rem;
+    font-weight: 400;
+}
+.margin-bottom-none{
+    margin-bottom: 0 !important;
+}
+.report-textarea-big {
+    width: 74rem;
+    height: 10rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 0.5rem;
+}
+.margin-top-none{
+    margin-top: 0 !important;
+}
+.padding-bottom-none{
+    padding-bottom: 0 !important;
+}
+.padding-top-none{
+    padding-top: 0 !important;
+}
+/*合计*/
+.total-box{
+    padding-right: 0 !important;
+}
+.order-content .total-box ul{
+    width: 100%;
+}
+.order-content .total-box ul li{
+   width: 33%;
+    display: inline-block;
+    text-align: center;
+    padding-left: 1.5rem;
+    padding-right: 0.5rem;
+}
+.bg-f .font_w_600{
+    font-weight: 600;
+}
+/*重置样式*/
+.table-content{
+    padding: 0 1.25rem;
+    margin-top: 1.25rem;
+}
+#container {
+    position: relative;
+ /*   height: calc(100% - 5rem);*/
+}
+.bootstrap-table {
+    margin: 1rem 2rem;
+}
+/*导航栏样式 start*/
+.detail_tab-bar{
+    position: relative;
+}
+.tab_bar {
+    padding-left: 0;
+}
+.tab_bar li{
+    display: inline-block;
+    font-size: 1.125rem;
+    color: var(--fontColor);
+    cursor: pointer;
+}
+.tab_bar li a{
+    color: var(--fontColor);
+    display: inline-block;
+    padding: 0 2rem 0.75rem 2rem;
+}
+.tab-a-active{
+    color: var(--activeColor) !important;
+}
+.tab-active{
+    border-bottom: solid 3px var(--activeColor);
+    font-weight: 500;
+}
+.state_box{
+    position: absolute;
+    right: 2.5rem;
+    bottom: 1rem;
+    font-size: 1.625rem;
+    text-align: right;
+    color: rgb(26,26,26);
+}
+.state_box span{
+    display: block;
+
+}
+.state_box span:first-of-type{
+    margin-bottom: 1rem;
+    font-size: 1.125rem;
+    color: rgb(128,128,128);
+}
+/*导航栏样式 end*/
+
+/*内容展示 start*/
+.company_report_name{
+    border-bottom: none;
+    padding-bottom: 0rem;
+}
+.order-content{
+    padding: 1rem;
+}
+.company_info{
+    font-size: 1.25rem;
+    color: #191919;
+    font-weight: 600;
+    padding: 1rem 0 1rem 1rem;
+}
+.table_summary_content{
+    padding: 1rem;
+    color: var(--fontColor);
+}
+.table_summary_content p{
+    line-height: 2rem;
+    font-size: 1rem;
+}
+/*重置公共样式*/
+.bg-f{
+    min-height: 0;
+}
+.table_summary{
+    margin-top: 1rem;
+}
+.table_summary .l-title{
+    background-color: rgb(250,250,250);
+    border: 1px solid #e6e6e6;
+}
+/*流程进度 start*/
+.progress-box{
+    padding-top: 0;
+}
+.bar_box{
+    margin-top: 0.875rem;
+}
+.bar_box span{
+    display: block;
+    /* width: 12.625rem;*/
+    padding: 0.5rem 0;
+    color: var(--fontColor);
+
+}
+.bar_box ul li{
+    display: inline-block;
+    font-size: 1.125rem;
+}
+.bar_box .bar-span-box{
+    height: 3rem;
+    margin-bottom: 0.5rem;
+}
+.bar_box .span_circle{
+    width: 0.625rem;
+    height: 0.625rem;
+    border-radius: 0.3125rem;
+    display: inline-block;
+    margin-right: 1.25rem;
+    padding: 0;
+ /*   background-color: rgb(209,209,209);*/
+    background: url("../../imgs/order/dot-gray.png") no-repeat;
+    background-size: 100% 100%;
+}
+.bar_box .span_bar{
+    width: 7.3rem;
+    height: 0.3rem;
+    display: inline-block;
+    vert-align: middle;
+    margin-right: 1.25rem;
+    padding: 0;
+    background-color: rgb(209,209,209);
+}
+.bar_box ul li span:first-of-type{
+    padding-top: 0;
+}
+
+.bar_box .span_active{
+    width: 0.625rem;
+    height: 0.625rem;
+    border-radius: 0.3125rem;
+ /*   background-color:  var(--activeColor);*/
+    background: url("../../imgs/order/dot-blue.png") no-repeat;
+    background-size: 100% 100%;
+    display: inline-block;
+    padding: 0;
+    margin-right: 1.25rem;
+}
+.bar_box .bar_active{
+    width: 7.5rem;
+    height: 0.3rem;
+    background-color:  var(--activeColor);
+    display: inline-block;
+    padding: 0;
+    margin-right: 1.25rem;
+}
+.bar_box .circle_active{
+    width: 1.5rem;
+    height: 1.5rem;
+   /* border-radius: 0.75rem;
+    background: -webkit-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Safari 5.1 - 6.0 *!
+    background: -o-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Opera 11.6 - 12.0 *!
+    background: -moz-radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* Firefox 3.6 - 15 *!
+    background: radial-gradient(#2592fc, #C5E6FC, #E6E7FF); !* 标准的语法 *!*/
+    background: url("../../imgs/order/dot-select.png") no-repeat;
+    background-size: 100% 100%;
+    display: inline-block;
+    margin-right: 1.25rem;
+}
+.bar_box .world_active{
+    color:var(--titleColor);
+    font-weight: 600;
+}
+/*流程进度 end*/
+
+/*附件样式*/
+.downloadFile{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 11.25rem;
+    height: 8.125rem;
+    border:1px dashed #ebecf0;
+    border-radius: 6px;
+    margin-left: 1rem;
+}
+.order-yulan{
+    text-align: center;
+    width: 11.25rem;
+}
+/*表格样式重置*/
+.fixed-table-container thead th .th-inner, .fixed-table-container tbody td .th-inner {
+    padding-left: 1.5rem;
+}
+.bootstrap-table .table:not(.table-condensed), .bootstrap-table .table:not(.table-condensed) > tbody > tr > th, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > th, .bootstrap-table .table:not(.table-condensed) > thead > tr > td, .bootstrap-table .table:not(.table-condensed) > tbody > tr > td, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > td{
+    padding-left: 1.5rem;
+}
+/*圆环图样式*/
+.invest-ratio-echarts .chartBox{
+    width: 100%;
+    height: 15rem;
+}
+.invest-ratio-echarts .chartBox #ec001_pie{
+    width: 100%;
+    height: 15rem;
+}
+/*给内容加边框 没有上边框*/
+.box_border{
+    border: 1px solid #e6e6e6;
+    border-top: 0;
+    font-weight: 400;
+}
+.box_border_all{
+    border: 1px solid #e6e6e6;
+    font-weight: 400;
+    font-size: 1rem;
+}
+/*备注信息*/
+.info_remark{
+    line-height: 2rem;
+    font-weight: 400;
+}
+.margin-bottom-none{
+    margin-bottom: 0 !important;
+}
+.report-textarea-big {
+    width: 74rem;
+    height: 10rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 0.5rem;
+}
+.margin-top-none{
+    margin-top: 0 !important;
+}
+.padding-bottom-none{
+    padding-bottom: 0 !important;
+}
+.padding-top-none{
+    padding-top: 0 !important;
+}
+/*合计*/
+.total-box{
+    padding-right: 0 !important;
+}
+.order-content .total-box ul{
+    width: 100%;
+}
+.order-content .total-box ul li{
+   width: 33%;
+    display: inline-block;
+    text-align: center;
+    padding-left: 1.5rem;
+    padding-right: 0.5rem;
+}
+.bg-f .font_w_600{
+    font-weight: 600;
+}
