--- a/src/main/webapp/static/credit/css/reset.css
+++ b/src/main/webapp/static/credit/css/reset.css
@@ -74,6 +74,7 @@ html,body {
 table tbody tr:hover {
     background: #e6f7ff!important;
 }
+
 .btn-disabled {
     background: #ccc;
     color: #fff;
@@ -180,7 +181,7 @@ label.col-md-4{
 /*滚动条样式*/
 .fixed-table-body::-webkit-scrollbar {/*滚动条整体样式*/
     width: 4px;     /*高宽分别对应横竖滚动条的尺寸*/
-    height: 4px;
+    height: 12px;
 }
 .fixed-table-body::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
     margin: 0 2.5rem;
@@ -208,7 +209,6 @@ label.col-md-4{
  .bootstrap-table .table:not(.table-condensed), .bootstrap-table .table:not(.table-condensed) > tbody > tr > th, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > th, .bootstrap-table .table:not(.table-condensed) > thead > tr > td, .bootstrap-table .table:not(.table-condensed) > tbody > tr > td, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > td {
     border-width: 1px 0;
     border-color: #e5e5e5;
-    white-space: nowrap;
  }
  .bootstrap-table .table thead > tr > th {
     border-width: 1px 0;
@@ -272,6 +272,7 @@ label.col-md-4{
 }
 .modal-footer {
     padding: 2rem;
+    border: none;
 }
 
 /**表格排序*/
