--- a/src/main/webapp/static/credit/css/login.css
+++ b/src/main/webapp/static/credit/css/login.css
@@ -7,7 +7,7 @@ html,body {
 }
 body {
    
-    background: url("../imgs/login/bg_login.png") no-repeat;
+    background: url("../imgs/login/bg_login.jpg") no-repeat;
     background-size: 100% 100%;
 }
 
