--- a/src/main/webapp/static/credit/css/reset.css
+++ b/src/main/webapp/static/credit/css/reset.css
@@ -187,7 +187,7 @@ label.col-md-4{
     margin: 0 2.5rem;
     border-radius: 5px;
     box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-    background: #c1c1c1;
+    background: #e5e5e5;
 }
 .fixed-table-body::-webkit-scrollbar-track {/*滚动条里面轨道*/
     /* box-shadow: inset 0 0 5px rgba(0,0,0,0.2); */
