--- a/src/main/webapp/static/credit/assets/bootstrap-table/css/bootstrap-table-fixed-columns.css
+++ b/src/main/webapp/static/credit/assets/bootstrap-table/css/bootstrap-table-fixed-columns.css
@@ -22,6 +22,6 @@
     animation: none;
 }
 
-.bootstrap-table .table-hover > tbody > tr.hover > td{
+.bootstrap-table .table-hover > tbody > tr.hover {
     background-color: #e6f7ff;
 }
